<resources>
    <string name="app_name">Pay My Fee</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No results found for your search</string>
    <string name="descr_image">Image</string>
    <string name="student_name">Mr. T.R. Saravanan</string>
    <string name="student_details">Looking for College Fees</string>
    <string name="bycity">Get By City</string>
    <string name="by_desc">Get the list of students by your city</string>
</resources>
